# lustreless-defender

./: CMakeLists.txt  Makefile  README.md  build.sh  engine.cpp  engine.h  entity.cpp  entity.h  game.cpp  game.h  highlight_shader.cpp  highlight_shader.h  light.cpp  main.cpp  occlusion_mask_shader.cpp  room.cpp  room.h  shadow_map_shader.h  shadow_mask_shader.cpp  shadow_mask_shader.h  solid_shader.h  sprite.cpp  targets.cmake  texture_shader.cpp  vector.cpp  vector.h  wave.cpp  wave.h
include/: camera.h  engine.h  image.h  light.h  room.h  shader.h  sprite.h  texture_shader.h  wave.h
main/: CMakeLists.txt  Makefile
main/include/: base_component.h  bullet_component.h  collidable_component.h  collision_detector.h  component.h  component_template.h  controlled_movement.h  enemy_component.h  enemy_spawner.h  engine.h  entity.h  entity_manager.h  entity_manager_util.h  entity_old.h  explosion.h  explosion_component.h  game_over.h  game_over_component.h  gun_component.h  highlight_shader.h  image.h  input_component.h  kinetic_component.h  light.h  light_component.h  movement.h  occlusion_mask_shader.h  player_component.h  player_shooter.h  processor.h  render_component.h  renderer.h  room.h  shader.h  simple_renderer.h  transform.h  transform_component.h  type_utils.h  wave.h
main/src/: CMakeLists.txt  Makefile  base_component.cc  collidable_component.cc  collision_detector.cc  component.cc  controlled_movement.cc  enemy_spawner.cc  engine.cc  entity_manager.cc  entity_old.cc  explosion.cc  explosion_component.cc  game_over.cc  gun_component.cc  highlight_shader.cc  image.cc  input_component.cc  kinetic_component.cc  light.cc  light_component.cc  main.cc  movement.cc  occlusion_mask_shader.cc  player_shooter.cc  processor.cc  render_component.cc  renderer.cc  room.cc  shader.cc  shadow_map_shader.cc  shadow_mask_shader.cc  simple_renderer.cc  solid_shader.cc  texture_shader.cc  transform.cc  transform_component.cc  vector.cc  wave.cc
main/src/shaders/: highlight.frag  highlight.vert  shadow_map.frag  texture.frag  transform.vert
src/: camera.cc  image.cc  image.cpp  light.cc  shader.cc  shadow_map_shader.cpp  solid_shader.cc
src/shaders/: highlight.frag  occlusion_mask.frag  shadow_map.frag  shadow_mask.frag  solid.frag  solid.vert
test/: CMakeLists.txt  component_test.cc  entity_manager_test.cc  example_test.cc
